# pyprintf

./: CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: publish.yml  python-publish.yml  tests.yml
src/pyprintf/: __init__.py  core.py
tests/: requirements.txt  test_sprintf.py
